<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name"
        android:inputType="textCapWords"
        />

    <TextView
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:id="@+id/whippedcream"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chocolate"
        android:text="@string/chocolate"
        android:textSize="16sp"
        />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/quantity"
         />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="8dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>
</ScrollView>